...
- (void)viewDidLoad
{
    [super viewDidLoad];
    
    self.title = @"Add Names";
    
    UIBarButtonItem *editButton = [[UIBarButtonItem alloc] initWithTitle:@"Edit" style:UIBarButtonItemStyleBordered target:self action:@selector(editTable:)];
    
    [self.navigationItem setRightBarButtonItem:editButton];
    
    
    _textField = [[UITextField alloc] init];
    _textField.frame = [self textFieldFrame];
    _textField.contentVerticalAlignment = UIControlContentVerticalAlignmentCenter;
    _textField.borderStyle = UITextBorderStyleRoundedRect;
    [self.view addSubview:_textField];
    
    _addButton = [UIButton buttonWithType:UIButtonTypeRoundedRect];
    [_addButton addTarget:self action:@selector(addName:) forControlEvents:UIControlEventTouchUpInside];
    _addButton.titleLabel.text = @"Add";
    [_addButton setTitle:@"Add" forState:UIControlStateNormal];
    _addButton.frame = [self addButtonFrame];
    [self.view addSubview:_addButton];
    
    
    _tableView = [[UITableView alloc] initWithFrame:[self tableViewFrame] style:_style];
...
